update again api delete/all 1
